Fix fdo#62399 Border incorrect for RTL

this patch will fix the incorrect border when you use
the cell format dialog.

Change-Id: Ieeeae4060a15e96e0de0f335f3c460df86f7dbf9
Reviewed-on: https://gerrit.libreoffice.org/2781
Reviewed-by: Ahmad Harthi <aalharthi@kacst.edu.sa>
Tested-by: Ahmad Harthi <aalharthi@kacst.edu.sa>